# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

add_library(nebula STATIC)

set_target_properties(nebula PROPERTIES FOLDER "Libs")
target_link_libraries(nebula PRIVATE Qt6::Quick)
target_include_directories(nebula PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

target_sources(nebula PRIVATE
    nebula.cpp
    nebula.h
)

qt_add_qml_module(nebula
    VERSION 0.1
    URI nebula 
    RESOURCE_PREFIX /nebula
    QML_FILES
        ui/compat/qt6/VPNColorOverlay.qml
        ui/compat/qt6/VPNLinearGradient.qml
        ui/compat/qt6/VPNRadialGradient.qml
        ui/compat/qt6/VPNRectangularGlow.qml
        ui/compat/qt6/VPNAnimatedRingsShader.qml
        ui/compat/qt6/VPNOpacityMask.qml
        ui/compat/qt6/VPNDropShadow.qml
        ui/components/VPNViewBase.qml
        ui/components/VPNLottieAnimation.qml
        ui/components/VPNTabNavigation.qml
        ui/components/VPNToggleCard.qml
        ui/components/VPNButton.qml
        ui/components/VPNToggle.qml
        ui/components/VPNIcon.qml
        ui/components/VPNIconAndLabel.qml
        ui/components/VPNSettingsToggle.qml
        ui/components/VPNGraphLegendMarker.qml
        ui/components/VPNIPAddress.qml
        ui/components/VPNPanel.qml
        ui/components/VPNScreenBase.qml
        ui/components/VPNFocusOutline.qml
        ui/components/VPNCard.qml
        ui/components/VPNCollapsibleCard.qml
        ui/components/VPNCheckBoxAlert.qml
        ui/components/VPNComposerView.qml
        ui/components/VPNSegmentedToggle.qml
        ui/components/VPNSubscriptionOption.qml
        ui/components/forms/VPNContextualAlerts.qml
        ui/components/forms/VPNInputStates.qml
        ui/components/forms/VPNTextField.qml
        ui/components/forms/VPNInputBackground.qml
        ui/components/forms/VPNTextArea.qml
        ui/components/forms/VPNPasswordInput.qml
        ui/components/forms/VPNRadioButton.qml
        ui/components/forms/VPNCursorDelegate.qml
        ui/components/forms/VPNSearchBar.qml
        ui/components/forms/VPNContextualAlert.qml
        ui/components/forms/VPNComboBox.qml
        ui/components/VPNServerListToggle.qml
        ui/components/VPNTutorialList.qml
        ui/components/VPNConnectionInfoScreen.qml
        ui/components/VPNMouseArea.qml
        ui/components/VPNLogoLoader.qml
        ui/components/VPNRecentConnections.qml
        ui/components/VPNStackView.qml
        ui/components/VPNCheckmarkList.qml
        ui/components/VPNPopup.qml
        ui/components/VPNMainImage.qml
        ui/components/VPNTimer.qml
        ui/components/VPNConnectionInfoItem.qml
        ui/components/VPNConnectionInfoContent.qml
        ui/components/VPNHeaderLink.qml
        ui/components/VPNHeadline.qml
        ui/components/VPNConnectionInfoError.qml
        ui/components/VPNTutorialCard.qml
        ui/components/VPNBadge.qml
        ui/components/VPNTipsAndTricksSection.qml
        ui/components/VPNConnectionStability.qml
        ui/components/VPNRadioDelegate.qml
        ui/components/VPNSignOut.qml
        ui/components/VPNList.qml
        ui/components/VPNExternalLinkListItem.qml
        ui/components/VPNCheckBox.qml
        ui/components/VPNIconButton.qml
        ui/components/VPNCallout.qml
        ui/components/VPNButtonLoader.qml
        ui/components/VPNLogsButton.qml
        ui/components/VPNSwipeAction.qml
        ui/components/VPNFooterMargin.qml
        ui/components/VPNNavigationBarClearance.qml
        ui/components/VPNAvatar.qml
        ui/components/VPNBoldInterLabel.qml
        ui/components/VPNInterLabel.qml
        ui/components/VPNGuideList.qml
        ui/components/VPNVerticalSpacer.qml
        ui/components/VPNDropShadowWithStates.qml
        ui/components/VPNPasteButton.qml
        ui/components/VPNControllerView.qml
        ui/components/VPNMenu.qml
        ui/components/VPNGreyLink.qml
        ui/components/VPNUIStates.qml
        ui/components/VPNFooterLink.qml
        ui/components/inAppAuth/VPNInAppAuthenticationBase.qml
        ui/components/inAppAuth/VPNInAppAuthenticationErrorPopup.qml
        ui/components/inAppAuth/VPNInAppAuthenticationInputs.qml
        ui/components/inAppAuth/VPNInAppAuthenticationPasswordCondition.qml
        ui/components/inAppAuth/VPNInAppAuthenticationLegalDisclaimer.qml
        ui/components/VPNClickableRow.qml
        ui/components/VPNSimplePopup.qml
        ui/components/VPNAnimatedRings.qml
        ui/components/VPNServerUnavailablePopup.qml
        ui/components/VPNLinkButton.qml
        ui/components/VPNPill.qml
        ui/components/VPNSwipeDelegate.qml
        ui/components/VPNRadioButtonLabel.qml
        ui/components/VPNTutorialPopups.qml
        ui/components/VPNServerList.qml
        ui/components/VPNServerLatencyIndicator.qml
        ui/components/VPNButtonBase.qml
        ui/components/VPNCheckBoxRow.qml
        ui/components/VPNControllerNav.qml
        ui/components/VPNSegmentedNavigation.qml
        ui/components/VPNPaymentMethod.qml
        ui/components/VPNSubtitle.qml
        ui/components/VPNBoldLabel.qml
        ui/components/VPNChevron.qml
        ui/components/VPNTextBlock.qml
        ui/components/VPNFocusBorder.qml
        ui/components/VPNUserProfile.qml
        ui/components/VPNFlickable.qml
        ui/components/VPNServerCountry.qml
        ui/components/VPNIPInfoPanel.qml
        ui/components/VPNMetropolisLabel.qml
        ui/components/VPNAlert.qml
        ui/components/VPNCancelButton.qml
        ui/components/VPNPopupButton.qml
        ui/components/VPNServerLabel.qml
        ui/components/VPNSystemAlert.qml
        ui/components/VPNLoader.qml
        ui/components/VPNSettingsItem.qml
        ui/components/VPNMobileStatusBarModifier.qml
        ui/components/VPNGuideCard.qml
        ui/components/VPNCheckmark.qml
        ui/components/VPNSemiMonoLabel.qml
        ui/components/VPNToolTip.qml
        ui/components/VPNLightLabel.qml
        utils/MZUiUtils.qml
    RESOURCES
        ui/themes/themes.js
        ui/themes/colors.js
        ui/resources/Icon1024.png
        ui/resources/flags/TG.png
        ui/resources/flags/ME.png
        ui/resources/flags/LA.png
        ui/resources/flags/MR.png
        ui/resources/flags/NI.png
        ui/resources/flags/LV.png
        ui/resources/flags/OM.png
        ui/resources/flags/AF.png
        ui/resources/flags/CY.png
        ui/resources/flags/BJ.png
        ui/resources/flags/AQ.png
        ui/resources/flags/CN.png
        ui/resources/flags/CO.png
        ui/resources/flags/CX.png
        ui/resources/flags/AG.png
        ui/resources/flags/MS.png
        ui/resources/flags/MD.png
        ui/resources/flags/ZM.png
        ui/resources/flags/VN.png
        ui/resources/flags/TF.png
        ui/resources/flags/TD.png
        ui/resources/flags/YT.png
        ui/resources/flags/LB.png
        ui/resources/flags/MF.png
        ui/resources/flags/LU.png
        ui/resources/flags/MQ.png
        ui/resources/flags/CZ.png
        ui/resources/flags/AE.png
        ui/resources/flags/CM.png
        ui/resources/flags/BI.png
        ui/resources/flags/AR.png
        ui/resources/flags/AS.png
        ui/resources/flags/BH.png
        ui/resources/flags/CL.png
        ui/resources/flags/AD.png
        ui/resources/flags/MP.png
        ui/resources/flags/LT.png
        ui/resources/flags/MG.png
        ui/resources/flags/LC.png
        ui/resources/flags/TR.png
        ui/resources/flags/UA.png
        ui/resources/flags/TV.png
        ui/resources/flags/VI.png
        ui/resources/flags/TA.png
        ui/resources/flags/MT.png
        ui/resources/flags/NO.png
        ui/resources/flags/MC.png
        ui/resources/flags/CH.png
        ui/resources/flags/BL.png
        ui/resources/flags/AW.png
        ui/resources/flags/BZ.png
        ui/resources/flags/BM.png
        ui/resources/flags/CI.png
        ui/resources/flags/MU.png
        ui/resources/flags/US.png
        ui/resources/flags/TW.png
        ui/resources/flags/YE.png
        ui/resources/flags/MW.png
        ui/resources/flags/NL.png
        ui/resources/flags/LS.png
        ui/resources/flags/BO.png
        ui/resources/flags/AT.png
        ui/resources/flags/CK.png
        ui/resources/flags/AC.png
        ui/resources/flags/BY.png
        ui/resources/flags/AU.png
        ui/resources/flags/BN.png
        ui/resources/flags/MA.png
        ui/resources/flags/NZ.png
        ui/resources/flags/LR.png
        ui/resources/flags/MV.png
        ui/resources/flags/TC.png
        ui/resources/flags/UG.png
        ui/resources/flags/TT.png
        ui/resources/flags/PL.png
        ui/resources/flags/RS.png
        ui/resources/flags/IN.png
        ui/resources/flags/GE.png
        ui/resources/flags/GR.png
        ui/resources/flags/GS.png
        ui/resources/flags/GD.png
        ui/resources/flags/IO.png
        ui/resources/flags/HK.png
        ui/resources/flags/KP.png
        ui/resources/flags/KG.png
        ui/resources/flags/PM.png
        ui/resources/flags/SV.png
        ui/resources/flags/RE.png
        ui/resources/flags/SA.png
        ui/resources/flags/SC.png
        ui/resources/flags/ST.png
        ui/resources/flags/KE.png
        ui/resources/flags/IM.png
        ui/resources/flags/KR.png
        ui/resources/flags/GF.png
        ui/resources/flags/DJ.png
        ui/resources/flags/GQ.png
        ui/resources/flags/GP.png
        ui/resources/flags/DK.png
        ui/resources/flags/GG.png
        ui/resources/flags/IL.png
        ui/resources/flags/PN.png
        ui/resources/flags/SB.png
        ui/resources/flags/PY.png
        ui/resources/flags/RU.png
        ui/resources/flags/KW.png
        ui/resources/flags/DO.png
        ui/resources/flags/GT.png
        ui/resources/flags/GB.png
        ui/resources/flags/GU.png
        ui/resources/flags/JE.png
        ui/resources/flags/HM.png
        ui/resources/flags/SG.png
        ui/resources/flags/PK.png
        ui/resources/flags/SR.png
        ui/resources/flags/SE.png
        ui/resources/flags/JP.png
        ui/resources/flags/GW.png
        ui/resources/flags/EH.png
        ui/resources/flags/DZ.png
        ui/resources/flags/GA.png
        ui/resources/flags/FR.png
        ui/resources/flags/DM.png
        ui/resources/flags/HN.png
        ui/resources/flags/SD.png
        ui/resources/flags/RW.png
        ui/resources/flags/PH.png
        ui/resources/flags/SS.png
        ui/resources/flags/QA.png
        ui/resources/flags/PE.png
        ui/resources/flags/PR.png
        ui/resources/flags/SI.png
        ui/resources/flags/HT.png
        ui/resources/flags/ES.png
        ui/resources/flags/GL.png
        ui/resources/flags/GM.png
        ui/resources/flags/ER.png
        ui/resources/flags/FI.png
        ui/resources/flags/EE.png
        ui/resources/flags/KN.png
        ui/resources/flags/HU.png
        ui/resources/flags/IQ.png
        ui/resources/flags/KY.png
        ui/resources/flags/SH.png
        ui/resources/flags/PS.png
        ui/resources/flags/PF.png
        ui/resources/flags/SJ.png
        ui/resources/flags/ID.png
        ui/resources/flags/IS.png
        ui/resources/flags/EG.png
        ui/resources/flags/FK.png
        ui/resources/flags/FJ.png
        ui/resources/flags/GN.png
        ui/resources/flags/GY.png
        ui/resources/flags/IR.png
        ui/resources/flags/KM.png
        ui/resources/flags/IE.png
        ui/resources/flags/KZ.png
        ui/resources/flags/RO.png
        ui/resources/flags/SK.png
        ui/resources/flags/PG.png
        ui/resources/flags/PT.png
        ui/resources/flags/SO.png
        ui/resources/flags/SX.png
        ui/resources/flags/HR.png
        ui/resources/flags/KI.png
        ui/resources/flags/JM.png
        ui/resources/flags/EU.png
        ui/resources/flags/EC.png
        ui/resources/flags/DG.png
        ui/resources/flags/ET.png
        ui/resources/flags/FO.png
        ui/resources/flags/KH.png
        ui/resources/flags/SY.png
        ui/resources/flags/SN.png
        ui/resources/flags/PW.png
        ui/resources/flags/SL.png
        ui/resources/flags/FM.png
        ui/resources/flags/GI.png
        ui/resources/flags/EA.png
        ui/resources/flags/DE.png
        ui/resources/flags/GH.png
        ui/resources/flags/IC.png
        ui/resources/flags/JO.png
        ui/resources/flags/IT.png
        ui/resources/flags/PA.png
        ui/resources/flags/SZ.png
        ui/resources/flags/SM.png
        ui/resources/flags/TN.png
        ui/resources/flags/ML.png
        ui/resources/flags/CG.png
        ui/resources/flags/AX.png
        ui/resources/flags/CP.png
        ui/resources/flags/AO.png
        ui/resources/flags/BT.png
        ui/resources/flags/BB.png
        ui/resources/flags/CF.png
        ui/resources/flags/MM.png
        ui/resources/flags/LI.png
        ui/resources/flags/NA.png
        ui/resources/flags/MZ.png
        ui/resources/flags/TO.png
        ui/resources/flags/VG.png
        ui/resources/flags/VE.png
        ui/resources/flags/TZ.png
        ui/resources/flags/TM.png
        ui/resources/flags/MX.png
        ui/resources/flags/NC.png
        ui/resources/flags/MO.png
        ui/resources/flags/LK.png
        ui/resources/flags/CD.png
        ui/resources/flags/AL.png
        ui/resources/flags/BW.png
        ui/resources/flags/CR.png
        ui/resources/flags/BV.png
        ui/resources/flags/AM.png
        ui/resources/flags/AZ.png
        ui/resources/flags/BA.png
        ui/resources/flags/MN.png
        ui/resources/flags/NU.png
        ui/resources/flags/MY.png
        ui/resources/flags/TL.png
        ui/resources/flags/WS.png
        ui/resources/flags/TH.png
        ui/resources/flags/XK.png
        ui/resources/flags/NF.png
        ui/resources/flags/LY.png
        ui/resources/flags/AI.png
        ui/resources/flags/BR.png
        ui/resources/flags/CV.png
        ui/resources/flags/BE.png
        ui/resources/flags/CA.png
        ui/resources/flags/BD.png
        ui/resources/flags/CW.png
        ui/resources/flags/BS.png
        ui/resources/flags/NG.png
        ui/resources/flags/MK.png
        ui/resources/flags/NP.png
        ui/resources/flags/VA.png
        ui/resources/flags/UZ.png
        ui/resources/flags/UM.png
        ui/resources/flags/TK.png
        ui/resources/flags/VC.png
        ui/resources/flags/ZW.png
        ui/resources/flags/NR.png
        ui/resources/flags/NE.png
        ui/resources/flags/CU.png
        ui/resources/flags/BQ.png
        ui/resources/flags/BF.png
        ui/resources/flags/BG.png
        ui/resources/flags/CC.png
        ui/resources/flags/MH.png
        ui/resources/flags/ZA.png
        ui/resources/flags/UY.png
        ui/resources/flags/WF.png
        ui/resources/flags/UN.png
        ui/resources/flags/VU.png
        ui/resources/flags/TJ.png
        ui/resources/logo-dock.png
        ui/resources/avatar-default.png
        ui/resources/search.svg
        ui/resources/checkmark.svg
        ui/resources/arrow-forward.svg
        ui/resources/chevron.svg
        ui/resources/arrow-toggle.svg
        ui/resources/navbar/home.svg
        ui/resources/navbar/messages-notification-selected.svg
        ui/resources/navbar/settings.svg
        ui/resources/navbar/messages-selected.svg
        ui/resources/navbar/home-selected.svg
        ui/resources/navbar/messages-notification.svg
        ui/resources/navbar/settings-selected.svg
        ui/resources/navbar/messages.svg
        ui/resources/server-latency-unavailable.svg
        ui/resources/updateStatusUpdateAvailable.svg
        ui/resources/back-dark.svg
        ui/resources/server-latency-weak.svg
        ui/resources/down.svg
        ui/resources/close-dark.svg
        ui/resources/bandwidth.svg
        ui/resources/devices.svg
        ui/resources/sparkles.svg
        ui/resources/updateStatusUpToDate.svg
        ui/resources/devicesRemove.svg
        ui/resources/checkmark-green.svg
        ui/resources/eye-hidden.svg
        ui/resources/devicesLimit.svg
        ui/resources/settings.svg
        ui/resources/connection-green.svg
        ui/resources/settings-white.svg
        ui/resources/download.svg
        ui/resources/externalLink.svg
        ui/resources/close-white.svg
        ui/resources/close-darker.svg
        ui/resources/warning-dark-orange.svg
        ui/resources/warning-orange.svg
        ui/resources/switching.svg
        ui/resources/shield-green50.svg
        ui/resources/location-dark.svg
        ui/resources/plus.svg
        ui/resources/warning.svg
        ui/resources/checkmark-blue50.svg
        ui/resources/shield-on.svg
        ui/resources/connection.svg
        ui/resources/avatar-delete-account.svg
        ui/resources/buttonLoader.svg
        ui/resources/copy.svg
        ui/resources/refresh.svg
        ui/resources/chevron-right-dark.svg
        ui/resources/arrow-back-white.svg
        ui/resources/back.svg
        ui/resources/open-in-new.svg
        ui/resources/delete-gray.svg
        ui/resources/delete-white.svg
        ui/resources/eye-visible.svg
        ui/resources/paste.svg
        ui/resources/dropdown-closed.svg
        ui/resources/spinner.svg
        ui/resources/delete.svg
        ui/resources/clock.svg
        ui/resources/update-lock.svg
        ui/resources/verification-code.svg
        ui/resources/magic-dark.svg
        ui/resources/check-green70.svg
        ui/resources/arrow-forward-white.svg
        ui/resources/gift-dark.svg
        ui/resources/server-unavailable.svg
        ui/resources/globe.svg
        ui/resources/x-red50.svg
        ui/resources/server-latency-strong.svg
        ui/resources/upload.svg
        ui/resources/avatar.svg
        ui/resources/connection-info.svg
        ui/resources/shield-off.svg
        resources/shaders/baked/animatedRings.frag.qsb
)