[package]
name = "obfuscators"
version = "0.1.0"
edition = "2021"

[lib]
name = "obfuscators"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
rand = "0.8"
log = "0.4"
base64 = "0.22"
once_cell = "1.21.4"
tokio = { version = "1", features = ["rt", "macros", "time", "net"] }
udp-over-tcp = { git = "https://github.com/mullvad/udp-over-tcp", rev = "5c6d8f44a5aa12ed9bb4ae51dd17e5e22e5ec303" }

[build-dependencies]
cbindgen = "0.29.0"
